# BFS_Battle_for_Supremacy

./: .flake8  README.md  pyproject.toml
.github/workflows/: python-app.yml
bfs_battle_for_supremacy/: config.py  main.py  main.spec
bfs_battle_for_supremacy/cards/: cards.py  parser.py
bfs_battle_for_supremacy/game_logic/entities/: building.py  card.py  map.py  monster.py  player.py  resources.py  rock.py  square.py
bfs_battle_for_supremacy/game_logic/managers/: cards_manager.py  map_manager.py  player_manager.py  resources_manager.py
bfs_battle_for_supremacy/game_logic/utilities/: ai_handler.py
bfs_battle_for_supremacy/ui/: engine.py  utils.py
bfs_battle_for_supremacy/ui/components/game/: __init__.py  board.py  generations.py  tile.py
bfs_battle_for_supremacy/ui/layouts/: game.py  game_over.py  main_menu.py
bfs_battle_for_supremacy/ui/root/: __init__.py  button.py  center.py  component.py  container.py  dialog.py  image.py  keyboard_event_handler.py  layout.py  mouse_event_handler.py  rectangle.py  text.py
tests/: test_game_logic.py
