[tool.poetry]
name = "bfs-battle-for-supremacy"
version = "0.1.0"
description = ""
authors = ["abdulrhmansayedali <abdulrhmansayedali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pytest = "^8.3.3"
pygame = "^2.6.1"
pyinstaller = "^6.11.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']